--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t camposped/react-test -f ./client/Dockerfile.dev ./client
 
 scripts:
-  - docker run -e CI=true camposped/react-test npm test
+  - docker run -e CI=true camposped/react-test npm run test
 
 after_success:
   - docker build -t camposped/multi-client ./client
