--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,14 @@ after_success:
   - docker push camposped/multi-server
   - docker push camposped/multi-worker
 
-
-# deploy:
-#   - 
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-2'
+  app: 'multi-docker'
+  env: 'Multi-docker-env'
+  bucket_name: 'elasticbeanstalk-us-east-2-295643758601'
+  bucket_path: 'docker-multi'
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
